add parse buttons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="grid"></div>
   <input type="file" id="file" value="">
   <button id="doParseDataBtn">Parse data</button>
-  <button id="buttons">Hey</button>
+  <div id="buttons"></div>
 
   <div id="output"></div>
 
