--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
 
   <!-- use version 0.20.0 -->
-  <script lang="javascript" src="https://cdn.sheetjs.com/xlsx-0.20.0/package/dist/xlsx.full.min.js"></script>
+  <!-- <script lang="javascript" src="https://cdn.sheetjs.com/xlsx-0.20.0/package/dist/xlsx.full.min.js"></script> -->
+  <script src="js/xlsx-sheetjs.0.20.0.js"></script>
   <script src="js/dropsheet.js"></script>
   <script src="js/main.js"></script>
 </body>
